--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,16 @@
-version: 2.1
-orbs:
-  node: circleci/node@1.1
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
+    executor: node/default
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        CI: true
+      - checkout
+      - node/install-packages:
+          cache-path: ~/project/node_modules
+          override-ci-command: npm install
+      - run: npm run test
+orbs:
+  node: circleci/node@x.y
+version: 2.1
+workflows:
+  test_my_app:
+    jobs:
+      - test
