--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,6 @@ orbs:
   node: circleci/node@1.1
 version: 2.1
 workflows:
-  test_my_app:
+  node_install:
     jobs:
       - install-node-example
